# examen-parcial-si

./: .gitignore  API_README.md  API_SPEC_FOR_FRONTEND.md  Cargo.toml  README.md  RESUMEN_SISTEMA.md  benchmark.sh  examples.http  run.sh  test-api.sh
src/: benchmark_runner.rs  lib.rs  main.rs  membership_export.rs  navigation_runner.rs  visualizer_runner.rs
src/api/: handlers.rs  mod.rs  models.rs
src/fuzzy_system/: membership.rs  mod.rs  rules.rs  sets.rs  system.rs  tests.rs  variables.rs
src/map/: mod.rs
src/navigation/: mod.rs
src/simulation/: mod.rs
src/vehicle/: mod.rs
