[package]
name = "examen-parcial"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
macroquad = "0.4"
egui-macroquad = "0.17"
clap = { version = "4.5", features = ["derive"] }
plotters = "0.3"
pollster = "0.3"
rayon = "1.10"
