[package]
name = "examen-parcial"
version = "0.1.0"
edition = "2021"
default-run = "examen-parcial"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
macroquad = { version = "0.4", optional = true }
egui-macroquad = { version = "0.17", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
plotters = { version = "0.3", optional = true }
pollster = { version = "0.3", optional = true }
rayon = "1.10"
tokio = { version = "1", features = ["full"] }
shuttle-axum = "0.57.0"
shuttle-runtime = "0.57.0"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["api"]
api = []
cli = ["macroquad", "egui-macroquad", "clap", "plotters", "pollster"]

[[bin]]
name = "cli"
path = "src/bin/cli_main.rs"
required-features = ["cli"]

[[bin]]
name = "navigation"
path = "src/bin/navigation.rs"
required-features = ["cli"]

[[bin]]
name = "visualizer"
path = "src/bin/visualizer.rs"
required-features = ["cli"]

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"
required-features = ["cli"]
